# alfonse-gltut

./: CMakeLists.txt  README.org
Tut 01 Hello Triangle/: CMakeLists.txt
Tut 03 OpenGLs Moving Triangle/: CMakeLists.txt  cpuPositionOffset.cpp
Tut 12 Dynamic Range/: CMakeLists.txt
Tut 16 Gamma and Textures/: CMakeLists.txt  LightEnv.cpp
framework/: CMakeLists.txt  framework.cpp  log.txt
